update Section01 what's on

--- a/index.html
+++ b/index.html
@@ -214,151 +214,172 @@
           <div class="container clearfix">
             <!--what's on-->
             <div class="section01-col01 clearfix">
-              <div class="section-title section01-title clearfix">
-                  <h2 class="">
+              <div class="section01-title clearfix">
+                  <h2 class="tit">
                       <a href="#">What's On?<span>February 2021</span></a>
                   </h2>
                   <div class="view-more"><a href="#">전체보기</a></div>
               </div>
-            <!--calender-->
-            <ul class="monthly-list clearfix">
-                <li>
-                    <a href="#">
-                        <span class="day">Mon</span><span class="date">15</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <span class="day">Tue</span><span class="date">16</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <span class="day">Wed</span><span class="date">17</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <span class="day">Thu</span><span class="date">18</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <span class="day">Fri</span><span class="date">19</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <span class="day">Sat</span><span class="date">20</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <span class="day">Sun</span><span class="date">21</span>
-                    </a>
-                </li>
-            </ul>
+              <!--calender-->
+              <ul class="monthly-list clearfix">
+                  <li>
+                      <a href="#">
+                          <span class="day">Mon</span><span class="date">15</span>
+                      </a>
+                  </li>
+                  <li>
+                      <a href="#">
+                          <span class="day">Tue</span><span class="date">16</span>
+                      </a>
+                  </li>
+                  <li>
+                      <a href="#">
+                          <span class="day">Wed</span><span class="date">17</span>
+                      </a>
+                  </li>
+                  <li>
+                      <a href="#">
+                          <span class="day">Thu</span><span class="date">18</span>
+                      </a>
+                  </li>
+                  <li>
+                      <a href="#">
+                          <span class="day">Fri</span><span class="date">19</span>
+                      </a>
+                  </li>
+                  <li>
+                      <a href="#">
+                          <span class="day">Sat</span><span class="date">20</span>
+                      </a>
+                  </li>
+                  <li>
+                      <a href="#">
+                          <span class="day">Sun</span><span class="date">21</span>
+                      </a>
+                  </li>
+              </ul>
               <!-- img-wrap -->
               <div class="img-wrap">
-                  <div class="img-box clearfix">
-                      <div class="text-wrap">
-                          <h4>02/05(금)</h4>
-                          <h2>사샤 슬론 LIVE<br>PLAY ▶</h2>
-                          <p>Fan-made LIVE3, 영상 공개!</p>
-                          <h4>팬메이드라이브</h4>
+                  <a href="">
+                      <div class="img-box clearfix">
+                          <div class="left-wrap">
+                              <h4>02/17(수) ~ 02/22(월)</h4>
+                              <h2>초보 캠퍼를 위한<br>캠핑 A to Z</h2>
+                              <p>트래블 라이브러리 라이브 테마 토크 신청</p>
+                              <h4>트래블 라이브러리</h4><span>예약</span>
+                          </div>
+                          <div class="right-wrap">
+                              <img src="img/main/thum01.jpg" alt="">
+                              <span class="img-text">청담</span>
+                          </div>
                       </div>
-                      <div class="row"><img src="./img/main/post-01.jpg" alt=""></div>
-                  </div>
-                  <div class="img-box clearfix">
-                      <div class="text-wrap">
-                          <h4>02/05(금)</h4>
-                          <h2>사샤 슬론 LIVE<br>PLAY ▶</h2>
-                          <p>Fan-made LIVE3, 영상 공개!</p>
-                          <h4>팬메이드라이브</h4>
+                  </a>
+                  <a href="">
+                      <div class="img-box clearfix">
+                          <div class="left-wrap">
+                              <h4>02/15(월) ~ 02/21(일)</h4>
+                              <h2>DIVE에서 뉴욕 MoMA 전시를 관람해봐!</h2>
+                              <p>
+                                  <양혜규: 손잡이>전, 온라인 관람과 QnA
+                              </p>
+                              <span>예약</span>
+                          </div>
+                          <div class="right-wrap">
+                              <img src="img/main/thum02.jpg" alt="">
+                          </div>
                       </div>
-                      <div class="row"><img src="./img/main/post-01.jpg" alt=""></div>
-                  </div>
-                  <div class="img-box clearfix">
-                      <div class="text-wrap">
-                          <h4>02/05(금)</h4>
-                          <h2>사샤 슬론 LIVE<br>PLAY ▶</h2>
-                          <p>Fan-made LIVE3, 영상 공개!</p>
-                          <h4>팬메이드라이브</h4>
+                  </a>
+                  <a href="">
+                      <div class="img-box clearfix">
+                          <div class="left-wrap">
+                              <h4>02/09(화) ~ 02/21(일)</h4>
+                              <h2>카더가든<br>한정판 바이닐</h2>
+                              <p>Limited Vinyl Club</p>
+                              <h4>바이닐앤플라스틱</h4><span>예약</span>
+                          </div>
+                          <div class="right-wrap"><img src="img/main/thum03.jpg" alt=""></div>
                       </div>
-                      <div class="row"><img src="./img/main/post-01.jpg" alt=""></div>
-                  </div>
-                  <div class="img-box clearfix">
-                      <div class="text-wrap">
-                          <h4>02/05(금)</h4>
-                          <h2>사샤 슬론 LIVE<br>PLAY ▶</h2>
-                          <p>Fan-made LIVE3, 영상 공개!</p>
-                          <h4>팬메이드라이브</h4>
+                  </a>
+                  <a href="">
+                      <div class="img-box clearfix">
+                          <div class="left-wrap">
+                              <h4>02/05(금) ~ 04/04(일)</h4>
+                              <h2>달콤 쌉싸름한 초콜릿</h2>
+                              <p>Food Theme 12. Chocolate</p>
+                              <h4>쿠킹 라이브러리</h4>
+                          </div>
+                          <div class="right-wrap"><img src="./img/main/thum04.jpg" alt=""></div>
                       </div>
-                      <div class="row"><img src="./img/main/post-01.jpg" alt=""></div>
-                  </div>
-                  <div class="img-box clearfix">
-                      <div class="text-wrap">
-                          <h4>02/05(금)</h4>
-                          <h2>사샤 슬론 LIVE<br>PLAY ▶</h2>
-                          <p>Fan-made LIVE3, 영상 공개!</p>
-                          <h4>팬메이드라이브</h4>
+                  </a>
+                  <a href="">
+                      <div class="img-box clearfix">
+                          <div class="left-wrap">
+                              <h4>02/02(화) ~ 04/04(일)</h4>
+                              <h2>도심 속 캠핑</h2>
+                              <p>Travel Theme 59. Camping</p>
+                              <h4>트래블 라이브러리</h4>
+                          </div>
+                          <div class="right-wrap"><img src="./img/main/thum05.jpg" alt=""></div>
                       </div>
-                      <div class="row"><img src="./img/main/post-01.jpg" alt=""></div>
-                  </div>
-                  <div class="img-box clearfix">
-                      <div class="text-wrap">
-                          <h4>02/05(금)</h4>
-                          <h2>사샤 슬론 LIVE<br>PLAY ▶</h2>
-                          <p>Fan-made LIVE3, 영상 공개!</p>
-                          <h4>팬메이드라이브</h4>
+                  </a>
+                  <a href="">
+                      <div class="img-box clearfix">
+                          <div class="left-wrap">
+                              <h4>02/02(화) ~ 04/04(일)</h4>
+                              <h2>K-포크의 위엄</h2>
+                              <p>뮤직 테마 01. K-POP 이전의 역사</p>
+                              <h4>뮤직 라이브러리</h4>
+                          </div>
+                          <div class="right-wrap"><img src="./img/main/thum06.jpg" alt=""></div>
                       </div>
-                      <div class="row"><img src="./img/main/post-01.jpg" alt=""></div>
-                  </div>
-                  <div class="img-box clearfix">
-                      <div class="text-wrap">
-                          <h4>02/05(금)</h4>
-                          <h2>사샤 슬론 LIVE<br>PLAY ▶</h2>
-                          <p>Fan-made LIVE3, 영상 공개!</p>
-                          <h4>팬메이드라이브</h4>
+                  </a>
+                  <a href="">
+                      <div class="img-box clearfix">
+                          <div class="left-wrap">
+                              <h4>02/02(화) ~ 04/04(일)</h4>
+                              <h2>팝과 결합한</h2>
+                              <p>뮤직 테마 01. K-POP 이전의 역사</p>
+                              <h4>뮤직 라이브러리</h4>
+                          </div>
+                          <div class="right-wrap"><img src="./img/main/thum07.jpg" alt=""></div>
                       </div>
-                      <div class="row"><img src="./img/main/post-01.jpg" alt=""></div>
-                  </div>
-                  <div class="img-box clearfix">
-                      <div class="text-wrap">
-                          <h4>02/05(금)</h4>
-                          <h2>사샤 슬론 LIVE<br>PLAY ▶</h2>
-                          <p>Fan-made LIVE3, 영상 공개!</p>
-                          <h4>팬메이드라이브</h4>
+                  </a>
+                  <a href="">
+                      <div class="img-box clearfix">
+                          <div class="left-wrap">
+                              <h4>02/05(금)</h4>
+                              <h2>길 위에서</h2>
+                              <p>Fan-made LIVE 시즌 3</p>
+                              <h4>트래블 라이브러리</h4>
+                          </div>
+                          <div class="right-wrap"><img src="./img/main/thum08.jpg" alt=""></div>
                       </div>
-                      <div class="row"><img src="./img/main/post-01.jpg" alt=""></div>
-                  </div>
-                  <div class="img-box clearfix">
-                      <div class="text-wrap">
-                          <h4>02/05(금)</h4>
-                          <h2>사샤 슬론 LIVE<br>PLAY ▶</h2>
-                          <p>Fan-made LIVE3, 영상 공개!</p>
-                          <h4>팬메이드라이브</h4>
+                  </a>
+                  <a href="">
+                      <div class="img-box clearfix">
+                          <div class="left-wrap">
+                              <h4>02/05(금)</h4>
+                              <h2>재즈를 만난 스누피</h2>
+                              <p>다채로운 피너츠의 음악 세계</p>
+                              <h4>바이닐앤플라스틱</h4>
+                          </div>
+                          <div class="right-wrap"><img src="./img/main/thum09.jpg" alt=""></div>
                       </div>
-                      <div class="row"><img src="./img/main/post-01.jpg" alt=""></div>
-                  </div>
-                  <div class="img-box clearfix">
-                      <div class="text-wrap">
-                          <h4>02/05(금)</h4>
-                          <h2>사샤 슬론 LIVE<br>PLAY ▶</h2>
-                          <p>Fan-made LIVE3, 영상 공개!</p>
-                          <h4>팬메이드라이브</h4>
+                  </a>
+                  <a href="">
+                      <div class="img-box clearfix">
+                          <div class="left-wrap">
+                              <h4>02/05(금)</h4>
+                              <h2>그래픽 디자인을</h2>
+                              <p>다채로운 피너츠의 음악 세계</p>
+                              <h4>바이닐앤플라스틱</h4>
+                          </div>
+                          <div class="right-wrap">
+                              <img src="./img/main/thum10.jpg" alt="">
+                              <span class="img-text">이태원</span>
+                          </div>
                       </div>
-                      <div class="row"><img src="./img/main/post-01.jpg" alt=""></div>
-                  </div>
-                  <div class="img-box clearfix">
-                      <div class="text-wrap">
-                          <h4>02/05(금)</h4>
-                          <h2>사샤 슬론 LIVE<br>PLAY ▶</h2>
-                          <p>Fan-made LIVE3, 영상 공개!</p>
-                          <h4>팬메이드라이브</h4>
-                      </div>
-                      <div class="row"><img src="./img/main/post-01.jpg" alt=""></div>
-                  </div>
+                  </a>
               </div><!-- img-wrap -->
           </div><!-- section01-col01 -->
             <section class="culture">
