update mobile whats on

--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
       <div class="gap">
         <div class="container clearfix">
           <h1 class="logo-wrap">
-            <a href="#section01" class="logo" alt="home">DIVE</a>
+            <a href="#section01" class="logo" alt="home"></a>
           </h1>
           <nav class="gnb">
             <ul class="gnb-wrap clearfix">
               <li class="gnb-item">
-                <a class="gnb-item-link" href="javascript:void(0)" alt="menu">what's on</a>
+                <a class="gnb-item-link" href="./sub01.html" alt="menu">what's on</a>
               </li>
               <li class="gnb-item">
                 <a class="gnb-depth-item gnb-item-link" href="javascript:void(0)" alt="menu">space</a>
@@ -264,7 +264,7 @@
                       <div class="img-box clearfix">
                           <div class="left-wrap">
                               <h4>02/17(수) ~ 02/22(월)</h4>
-                              <h2>초보 캠퍼를 위한<br>캠핑 A to Z</h2>
+                              <h2>초보 캠퍼를 위한 캠핑 A to Z</h2>
                               <p>트래블 라이브러리 라이브 테마 토크 신청</p>
                               <h4>트래블 라이브러리</h4><span>예약</span>
                           </div>
@@ -279,9 +279,7 @@
                           <div class="left-wrap">
                               <h4>02/15(월) ~ 02/21(일)</h4>
                               <h2>DIVE에서 뉴욕 MoMA 전시를 관람해봐!</h2>
-                              <p>
-                                  <양혜규: 손잡이>전, 온라인 관람과 QnA
-                              </p>
+                              <p><양혜규: 손잡이>전, 온라인 관람과 QnA</p>
                               <span>예약</span>
                           </div>
                           <div class="right-wrap">
@@ -293,11 +291,14 @@
                       <div class="img-box clearfix">
                           <div class="left-wrap">
                               <h4>02/09(화) ~ 02/21(일)</h4>
-                              <h2>카더가든<br>한정판 바이닐</h2>
+                              <h2>카더가든 한정판 바이닐</h2>
                               <p>Limited Vinyl Club</p>
                               <h4>바이닐앤플라스틱</h4><span>예약</span>
                           </div>
-                          <div class="right-wrap"><img src="img/main/thum03.jpg" alt=""></div>
+                          <div class="right-wrap">
+                            <img src="img/main/thum03.jpg" alt="">
+                            <span class="img-text">이태원</span>
+                          </div>
                       </div>
                   </a>
                   <a href="">
@@ -308,7 +309,10 @@
                               <p>Food Theme 12. Chocolate</p>
                               <h4>쿠킹 라이브러리</h4>
                           </div>
-                          <div class="right-wrap"><img src="./img/main/thum04.jpg" alt=""></div>
+                          <div class="right-wrap">
+                            <img src="./img/main/thum04.jpg" alt="">
+                            <span class="img-text">청담</span>
+                          </div>
                       </div>
                   </a>
                   <a href="">
@@ -319,7 +323,10 @@
                               <p>Travel Theme 59. Camping</p>
                               <h4>트래블 라이브러리</h4>
                           </div>
-                          <div class="right-wrap"><img src="./img/main/thum05.jpg" alt=""></div>
+                          <div class="right-wrap">
+                            <img src="./img/main/thum05.jpg" alt="">
+                            <span class="img-text">청담</span>
+                          </div>
                       </div>
                   </a>
                   <a href="">
@@ -330,49 +337,61 @@
                               <p>뮤직 테마 01. K-POP 이전의 역사</p>
                               <h4>뮤직 라이브러리</h4>
                           </div>
-                          <div class="right-wrap"><img src="./img/main/thum06.jpg" alt=""></div>
-                      </div>
-                  </a>
-                  <a href="">
-                      <div class="img-box clearfix">
-                          <div class="left-wrap">
-                              <h4>02/02(화) ~ 04/04(일)</h4>
-                              <h2>팝과 결합한</h2>
-                              <p>뮤직 테마 01. K-POP 이전의 역사</p>
-                              <h4>뮤직 라이브러리</h4>
+                          <div class="right-wrap">
+                            <img src="./img/main/thum06.jpg" alt="">
+                            <span class="img-text">이태원</span>
                           </div>
-                          <div class="right-wrap"><img src="./img/main/thum07.jpg" alt=""></div>
                       </div>
                   </a>
                   <a href="">
                       <div class="img-box clearfix">
                           <div class="left-wrap">
-                              <h4>02/05(금)</h4>
+                              <h4>02/01(월) ~ 02/28(일)</h4>
+                              <h2>팝과 결합한 그래픽디자인</h2>
+                              <p>2월의 레어 북 & <라이프> 매거진 컬렉션</p>
+                              <h4>디자인 라이브러리</h4>
+                          </div>
+                          <div class="right-wrap">
+                            <img src="./img/main/thum07.jpg" alt="">
+                            <span class="img-text">가회</span>
+                          </div>
+                      </div>
+                  </a>
+                  <a href="">
+                      <div class="img-box clearfix">
+                          <div class="left-wrap">
+                              <h4>01/26(화) ~ 04/11(일)</h4>
                               <h2>길 위에서</h2>
-                              <p>Fan-made LIVE 시즌 3</p>
+                              <p>On the Road Off the Road</p>
                               <h4>트래블 라이브러리</h4>
                           </div>
-                          <div class="right-wrap"><img src="./img/main/thum08.jpg" alt=""></div>
+                          <div class="right-wrap">
+                            <img src="./img/main/thum08.jpg" alt="">
+                            <span class="img-text">청담</span>
+                          </div>
                       </div>
                   </a>
                   <a href="">
                       <div class="img-box clearfix">
                           <div class="left-wrap">
-                              <h4>02/05(금)</h4>
+                              <h4>01/25(월) ~ 02/28(일)</h4>
                               <h2>재즈를 만난 스누피</h2>
                               <p>다채로운 피너츠의 음악 세계</p>
                               <h4>바이닐앤플라스틱</h4>
                           </div>
-                          <div class="right-wrap"><img src="./img/main/thum09.jpg" alt=""></div>
+                          <div class="right-wrap">
+                            <img src="./img/main/thum09.jpg" alt="">
+                            <span class="img-text">이태원</span>
+                          </div>
                       </div>
                   </a>
                   <a href="">
                       <div class="img-box clearfix">
                           <div class="left-wrap">
-                              <h4>02/05(금)</h4>
-                              <h2>그래픽 디자인을</h2>
-                              <p>다채로운 피너츠의 음악 세계</p>
-                              <h4>바이닐앤플라스틱</h4>
+                              <h4>01/20(수) ~ 03/31(수)</h4>
+                              <h2>그래픽디자인을 읽다</h2>
+                              <p>디자인 테마 03. Graphic Design</p>
+                              <h4>디자인 라이브러리</h4><span>예약</span>
                           </div>
                           <div class="right-wrap">
                               <img src="./img/main/thum10.jpg" alt="">
@@ -381,6 +400,9 @@
                       </div>
                   </a>
               </div><!-- img-wrap -->
+              <div class="moreBtn-wrap">
+                <button class="whatsOn-moreBtn">더 보기</button>
+              </div>
           </div><!-- section01-col01 -->
             <section class="culture">
              <h2 class="section-title section01-title">
